--- a/src/components/shared/_variables.scss
+++ b/src/components/shared/_variables.scss
@@ -43,6 +43,7 @@ caption,
 body {
     background-color: var(--themecolor, $mainBGColor);
     overflow: hidden;
+    padding-bottom: env(safe-area-inset-bottom, 0px);
 }
 
 a:visited {
